fix: resolve a regression caused by refactoring

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -946,7 +946,7 @@ OM = _omsg
     }
 
     // Feat -> Animate emojis.
-    if (emoji_ani) {
+    if (emoji_a) {
         @keyframes aPulse {
           0%   { transform: scale(.9) }
           50%  { transform: scale(1)  }
@@ -2209,7 +2209,7 @@ OM = _omsg
         }
 
         /// Feat -> Animate emojis.
-        if (emoji_ani) {
+        if (emoji_a) {
             emoji_k = (emoji_k == '') ? () : emoji_k
             emoji_p = (emoji_p == '') ? () : emoji_p
 
