feat: add option to override 'seen msg icon color'
Closes #181.

--- a/metadata.styl
+++ b/metadata.styl
@@ -137,6 +137,12 @@ emoji_k = '💋'
 /// Emojis with pulse animation.
 emoji_p = '🤩' '😍' '☺️' '❣️' '♥️' '❤️'
 
+// Override seen message icon color.
+ow_ack = 0
+
+// Seen message icon color.
+_ack = #ff6666
+
 // Override incoming message bubble color.
 ow_imsg = 0
 
