style: code cosmetics

--- a/metadata.styl
+++ b/metadata.styl
@@ -66,10 +66,10 @@ app_alerts = 'show'
 // Consistent drawer headers.
 app_header = 1
 
-/// Rounded corners for various menus.
+// Rounded corners for various menus.
 radius_m = 4px
 
-/// Rounded corners for input bar.
+// Rounded corners for input bar.
 radius_i = 24px
 
 // Rounded corners for avatars.
@@ -128,13 +128,13 @@ emoji_o = 0.8
 /// Options: 'default', 'medium', 'normal', 'small'
 emoji_b = 'default'
 
-/// Animated emojis.
+// Animated emojis.
 emoji_a = 1
 
-/// Emojis with kiss animation.
+// Emojis with kiss animation.
 emoji_k = '💋'
 
-/// Emojis with pulse animation.
+// Emojis with pulse animation.
 emoji_p = '🤩' '😍' '☺️' '❣️' '♥️' '❤️'
 
 // Override seen message icon color.
