--- a/wa.user.styl
+++ b/wa.user.styl
@@ -362,7 +362,7 @@ OM = _omsg
 
         /// UI font.
         --ui-font: ui_font, Segoe UI, Helvetica Neue, Helvetica, Lucida Grande,
-                   Arial, Ubuntu, Cantarell, Fira Sans, sans-serif i
+                   Arial, Ubuntu, Cantarell, Fira Sans, sans-serif
 
         /// Rounded corners.
         --r-menus:   radius_m
@@ -906,7 +906,7 @@ OM = _omsg
                 val = _v + \- + _i
 
                 /// Generate CSS variables.
-                { key }: val i
+                { key }: val
                 { key + '-rgb' }: to_rgb(val)
             }
         }
@@ -915,7 +915,7 @@ OM = _omsg
         --white:      _white
         --white-rgb:  to_rgb(_white)
         --sh:         _sh
-        --sh-rgb:     to_rgb(_sh, 1) i
+        --sh-rgb:     to_rgb(_sh, 1)
         --t:          transparent
         --bshadow:    0 4px 8px 2px var(--shadow)
 
