--- a/wa.user.css
+++ b/wa.user.css
@@ -6,17 +6,17 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.2.1
+@version      3.3.0
 @license      MIT
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
   :root:not(#z),
   .dark:not(#z) {
-    --version: 'Dark-WhatsApp Lite 3.2.1 — October 26th, 2020';
+    --version: 'Dark-WhatsApp Lite 3.3.0 — November 1st, 2020';
     --message: 'The v3 is here! 🎉 I wrote a blog post about it here: https://vednoc.me/blog/next-gen-of-dark-whatsapp \A\AI started working on an alternative to USo, currently in very early stages: https://userstyles.world 👀  \A\ARead more about v3, as always, in the project changelog:';
     --changes: '\A https://github.com/vednoc/dark-whatsapp\A\A\AP.S. CSS can not add links, only fake/pseudo text.';
-    --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif !important;
+    --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif;
     --r-menus: 4px;
     --r-inputs: 24px;
     --r-avatars: 50%;
@@ -49,6 +49,8 @@
     --msg-out-0-rgb: var(--ac-4-rgb);
     --msg-out-1: var(--ac-5);
     --msg-out-1-rgb: var(--ac-5-rgb);
+    --msg-ack: var(--ac-0);
+    --msg-ack-rgb: var(--ac-0-rgb);
     --gray-30: var(--bg-5);
     --gray-30-rgb: var(--bg-5-rgb);
     --gray-700: var(--fg-4);
@@ -253,8 +255,8 @@
     --highlight-rgb: var(--ac-0-rgb);
     --icon: var(--fg-3);
     --icon-rgb: var(--fg-3-rgb);
-    --icon-ack: var(--ac-0);
-    --icon-ack-rgb: var(--ac-0-rgb);
+    --icon-ack: var(--msg-ack);
+    --icon-ack-rgb: var(--msg-ack-rgb);
     --icon-disabled: var(--fg-5);
     --icon-disabled-rgb: var(--fg-5-rgb);
     --icon-fixed: var(--fg-3);
@@ -513,142 +515,142 @@
     --wallpaper-thumb-border-hover-rgb: var(--bg-4-rgb);
     --win32-title-primary: var(--fg-1);
     --win32-title-primary-rgb: var(--fg-1-rgb);
-    --bg-0: #1c2026 !important;
+    --bg-0: #1c2026;
     --bg-0-rgb: 28,32,38;
-    --bg-1: #1f232a !important;
+    --bg-1: #1f232a;
     --bg-1-rgb: 31,35,42;
-    --bg-2: #282d37 !important;
+    --bg-2: #282d37;
     --bg-2-rgb: 40,45,55;
-    --bg-3: #323843 !important;
+    --bg-3: #323843;
     --bg-3-rgb: 50,56,67;
-    --bg-4: #3b4250 !important;
+    --bg-4: #3b4250;
     --bg-4-rgb: 59,66,80;
-    --bg-5: #444d5c !important;
+    --bg-5: #444d5c;
     --bg-5-rgb: 68,77,92;
-    --fg-0: #f0f0f0 !important;
+    --fg-0: #f0f0f0;
     --fg-0-rgb: 240,240,240;
-    --fg-1: #eee !important;
+    --fg-1: #eee;
     --fg-1-rgb: 238,238,238;
-    --fg-2: #d6d6d6 !important;
+    --fg-2: #d6d6d6;
     --fg-2-rgb: 214,214,214;
-    --fg-3: #bebebe !important;
+    --fg-3: #bebebe;
     --fg-3-rgb: 190,190,190;
-    --fg-4: #a7a7a7 !important;
+    --fg-4: #a7a7a7;
     --fg-4-rgb: 167,167,167;
-    --fg-5: #8f8f8f !important;
+    --fg-5: #8f8f8f;
     --fg-5-rgb: 143,143,143;
-    --ac-0: #7289da !important;
+    --ac-0: #7289da;
     --ac-0-rgb: 114,137,218;
-    --ac-1: #6377bd !important;
+    --ac-1: #6377bd;
     --ac-1-rgb: 99,119,189;
-    --ac-2: #5566a0 !important;
+    --ac-2: #5566a0;
     --ac-2-rgb: 85,102,160;
-    --ac-3: #475483 !important;
+    --ac-3: #475483;
     --ac-3-rgb: 71,84,131;
-    --ac-4: #2f3756 !important;
+    --ac-4: #2f3756;
     --ac-4-rgb: 47,55,86;
-    --ac-5: #282f46 !important;
+    --ac-5: #282f46;
     --ac-5-rgb: 40,47,70;
-    --b1-0: #f07178 !important;
+    --b1-0: #f07178;
     --b1-0-rgb: 240,113,120;
-    --b1-1: #f08571 !important;
+    --b1-1: #f08571;
     --b1-1-rgb: 240,133,113;
-    --b1-2: #f09671 !important;
+    --b1-2: #f09671;
     --b1-2-rgb: 240,150,113;
-    --b1-3: #8f4a51 !important;
+    --b1-3: #8f4a51;
     --b1-3-rgb: 143,74,81;
-    --b1-4: #60353a !important;
+    --b1-4: #60353a;
     --b1-4-rgb: 96,53,58;
-    --b1-5: #4a2c30 !important;
+    --b1-5: #4a2c30;
     --b1-5-rgb: 74,44,48;
-    --b2-0: #f78c6c !important;
+    --b2-0: #f78c6c;
     --b2-0-rgb: 247,140,108;
-    --b2-1: #f7aa6c !important;
+    --b2-1: #f7aa6c;
     --b2-1-rgb: 247,170,108;
-    --b2-2: #f7bd6c !important;
+    --b2-2: #f7bd6c;
     --b2-2-rgb: 247,189,108;
-    --b2-3: #93594a !important;
+    --b2-3: #93594a;
     --b2-3-rgb: 147,89,74;
-    --b2-4: #623e36 !important;
+    --b2-4: #623e36;
     --b2-4-rgb: 98,62,54;
-    --b2-5: #4c322d !important;
+    --b2-5: #4c322d;
     --b2-5-rgb: 76,50,45;
-    --b3-0: #ffcb6b !important;
+    --b3-0: #ffcb6b;
     --b3-0-rgb: 255,203,107;
-    --b3-1: #ffea6b !important;
+    --b3-1: #ffea6b;
     --b3-1-rgb: 255,234,107;
-    --b3-2: #ffff6b !important;
+    --b3-2: #ffff6b;
     --b3-2-rgb: 255,255,107;
-    --b3-3: #977c4a !important;
+    --b3-3: #977c4a;
     --b3-3-rgb: 151,124,74;
-    --b3-4: #655435 !important;
+    --b3-4: #655435;
     --b3-4-rgb: 101,84,53;
-    --b3-5: #4e422d !important;
+    --b3-5: #4e422d;
     --b3-5-rgb: 78,66,45;
-    --b4-0: #c3e88d !important;
+    --b4-0: #c3e88d;
     --b4-0-rgb: 195,232,141;
-    --b4-1: #b0e88d !important;
+    --b4-1: #b0e88d;
     --b4-1-rgb: 176,232,141;
-    --b4-2: #a3e88d !important;
+    --b4-2: #a3e88d;
     --b4-2-rgb: 163,232,141;
-    --b4-3: #768c5c !important;
+    --b4-3: #768c5c;
     --b4-3-rgb: 118,140,92;
-    --b4-4: #505e41 !important;
+    --b4-4: #505e41;
     --b4-4-rgb: 80,94,65;
-    --b4-5: #3f4936 !important;
+    --b4-5: #3f4936;
     --b4-5-rgb: 63,73,54;
-    --b5-0: #89ddff !important;
+    --b5-0: #89ddff;
     --b5-0-rgb: 137,221,255;
-    --b5-1: #89c4ff !important;
+    --b5-1: #89c4ff;
     --b5-1-rgb: 137,196,255;
-    --b5-2: #89b4ff !important;
+    --b5-2: #89b4ff;
     --b5-2-rgb: 137,180,255;
-    --b5-3: #56869b !important;
+    --b5-3: #56869b;
     --b5-3-rgb: 86,134,155;
-    --b5-4: #3c5b69 !important;
+    --b5-4: #3c5b69;
     --b5-4-rgb: 60,91,105;
-    --b5-5: #304752 !important;
+    --b5-5: #304752;
     --b5-5-rgb: 48,71,82;
-    --b6-0: #82aaff !important;
+    --b6-0: #82aaff;
     --b6-0-rgb: 130,170,255;
-    --b6-1: #828fff !important;
+    --b6-1: #828fff;
     --b6-1-rgb: 130,143,255;
-    --b6-2: #8682ff !important;
+    --b6-2: #8682ff;
     --b6-2-rgb: 134,130,255;
-    --b6-3: #526a9b !important;
+    --b6-3: #526a9b;
     --b6-3-rgb: 82,106,155;
-    --b6-4: #394969 !important;
+    --b6-4: #394969;
     --b6-4-rgb: 57,73,105;
-    --b6-5: #2e3a52 !important;
+    --b6-5: #2e3a52;
     --b6-5-rgb: 46,58,82;
-    --b7-0: #c792ea !important;
+    --b7-0: #c792ea;
     --b7-0-rgb: 199,146,234;
-    --b7-1: #da92ea !important;
+    --b7-1: #da92ea;
     --b7-1-rgb: 218,146,234;
-    --b7-2: #e692ea !important;
+    --b7-2: #e692ea;
     --b7-2-rgb: 230,146,234;
-    --b7-3: #785c90 !important;
+    --b7-3: #785c90;
     --b7-3-rgb: 120,92,144;
-    --b7-4: #514062 !important;
+    --b7-4: #514062;
     --b7-4-rgb: 81,64,98;
-    --b7-5: #40344d !important;
+    --b7-5: #40344d;
     --b7-5-rgb: 64,52,77;
-    --b8-0: #9a91ea !important;
+    --b8-0: #9a91ea;
     --b8-0-rgb: 154,145,234;
-    --b8-1: #ad91ea !important;
+    --b8-1: #ad91ea;
     --b8-1-rgb: 173,145,234;
-    --b8-2: #b991ea !important;
+    --b8-2: #b991ea;
     --b8-2-rgb: 185,145,234;
-    --b8-3: #5f5c90 !important;
+    --b8-3: #5f5c90;
     --b8-3-rgb: 95,92,144;
-    --b8-4: #424062 !important;
+    --b8-4: #424062;
     --b8-4-rgb: 66,64,98;
-    --b8-5: #34344d !important;
+    --b8-5: #34344d;
     --b8-5-rgb: 52,52,77;
     --white: #fff;
     --white-rgb: 255,255,255;
     --sh: rgba(0,0,0,0.145);
-    --sh-rgb: 0,0,0 !important;
+    --sh-rgb: 0,0,0;
     --t: transparent;
     --bshadow: 0 4px 8px 2px var(--shadow);
     --intro-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='256' width='256'><g stroke='\%237289da'><path d='M128.4901 30.8659a95.4375 95.4375 0 00-95.4375 95.4375 95.4375 95.4375 0 0014.168 50.0332L35.6698 221.276l44.7989-12.498a95.4375 95.4375 0 0048.0214 12.9629 95.4375 95.4375 0 0095.4375-95.4375 95.4375 95.4375 0 00-95.4375-95.4375z' fill='\%23282d37' fill-rule='evenodd' stroke-width='18' stroke-linecap='square'/><path d='M97.8104 79.8463c-4.9671.0406-13.5028 2.0796-17.7812 14.8946-6.8318 20.4631 12.5737 43.3028 27.2438 57.4735 14.7975 14.2938 43.1559 26.507 58.0098 21.08 20.5566-8.9065 15.2475-22.9479 15.2475-22.9479l-22.9727-11.0878s-2.062-1.206-3.4146.5737c-1.0042 1.3213-9.4409 11.3755-9.4409 11.3755s-1.449 1.668-3.827.7402c-5.7574-2.2462-14.2018-7.4856-18.5314-10.7795-6.8875-5.2399-12.957-13.0846-16.9473-19.668-1.2556-2.5597.6953-4.709.6953-4.709s6.0303-8.2629 7.0176-9.5566c1.0068-1.3194.2539-3.3633.2539-3.3633l-10.539-23.2285s-2.0334-.8212-5.0138-.7969z' fill='\%237289da' stroke-linejoin='round'/></g></svg>");
