--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.2.1
+@version      3.3.0
 @license      MIT
 @preprocessor stylus
 
@@ -351,7 +351,7 @@ OM = _omsg
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.2.1 — October 26th, 2020'
+        --version: 'Dark-WhatsApp 3.3.0 — November 1st, 2020'
         --message: 'The v3 is here! 🎉 I wrote a blog post about it here: ' + \
                    'https://vednoc.me/blog/next-gen-of-dark-whatsapp \A\A' + \
                    'I started working on an alternative to USo, currently' + \
