--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1337,7 +1337,7 @@ OM = _omsg
         }
 
         /// Feat -> Input border radius.
-        ._3xpD_ { rad: var(--r-inputs) i }
+        ._2Evw0 { rad: var(--r-inputs) i }
 
         /// Dropdowns -> Chat/Header.
         > span > div, ._3nLE_ {
@@ -1389,9 +1389,12 @@ OM = _omsg
         &::after { content: unset i }
 
         /// Search.
-        .gQzdc, ._3qx7_ {
+        /._22PcK {
+            c: 0 0 bg2
             border-bottom: 1px solid bg5 i
+            label { box-shadow: inset 0 0 0 1px bg4 }
             &::after { display: none i }
+            &._30SFc { box-shadow: var(--bshadow) }
 
             /// Remove animation.
             /._1yO24 { animation: none i }
@@ -1731,7 +1734,7 @@ OM = _omsg
             ._3eShu { border-bottom: 1px solid bg5 i }
 
             /// Feat -> Input border radius.
-            ._3uMse { rad: var(--r-inputs) i }
+            .DuUXI { rad: var(--r-inputs) i }
         }
 
         /// Fix styles for Google Maps.
