fix: update selectors for app alerts
This also removes unnecessary `border-bottom` rule. Thanks Erel!

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1412,12 +1412,10 @@ OM = _omsg
 
                     /// Feat -> Alerts.
                     if (app_alerts == 'hide') {
-                        & > div { display: none i }
+                        > div { display: none i }
                     } else if (app_alerts == 'notifications') {
-                        & > div {
-                            border-bottom: 1px solid bg5 i
-                            &._1evad { display: none i }
-                        }
+                        border-bottom: 1px solid bg5 i
+                        > div._1oIRX { display: none i }
                     } else {
                         border-bottom: 1px solid bg5 i
                     }
