fix: update selectors for system messages in chat

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1577,17 +1577,14 @@ OM = _omsg
         }
 
         /// System messages.
-        ._1E1g0 {
+        .KpuSa {
             border: 1px solid b63
 
-            /// Tweak text shadow.
-            text-shadow: 0 1px 0 to_rgba('fg-1', 0.3)
-
             /// End-to-end encryption message.
-            &._2n04H { border: 1px solid b34 }
+            &._1N_HH { border: 1px solid b34 }
 
             /// Bussiness account message.
-            &._2nH_- { border: 1px solid to_rgba('notification-biz-text', 0.3) }
+            &._1C8gB { border: 1px solid b54 }
         }
 
         /// Loading previous messages.
@@ -1605,9 +1602,6 @@ OM = _omsg
             /// Feat -> Show chat image.
             if (!chat_bg) { display: none i }
         }
-
-        /// Tweak text shadow.
-        ._1E1g0 { text-shadow: 0 1px 0 to_rgba('fg-3', 0.2) }
 
         /// Tweak 'unread messages' alert.
         ._9WQEN { border: none i }
