fix: update selectors on the landing page

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1268,7 +1268,7 @@ OM = _omsg
 
         &-main {
             a[href] { c: ac0 }
-            label, ._2yUXW { c: fg3 }
+            label, ._38sqg { c: fg3 }
             .landing-title { c: fg1 }
             rect[fill ^= '#f2f'], rect[fill ^= '#F2F'] { fill: bg5 }
             path[fill ^= '#818'] { fill: ac0 }
@@ -1282,14 +1282,14 @@ OM = _omsg
                 [role='button'] { c: white 0 ac0 }
 
                 /// Change white border when inactive.
-                &._2BIlf {
+                &.UlvkP {
                     outline: 4px solid ac0
                     box-shadow: 0 0 0 4px ac0
                 }
             }
 
             /// Video tutorial.
-            + ._3pdvT {
+            + ._3bA0V {
                 c: 0 0 t
                 img { opacity: 0.3 }
                 /// Reset background on button container.
@@ -1297,7 +1297,7 @@ OM = _omsg
             }
 
             /// 'Keep me signed in' tooltip. #59
-            ._3ybl8 {
+            ._1jxi5 {
                 c: white 0 ac0
                 box-shadow: bsh
                 &::before { border-bottom-color: ac0 i }
